desktop-themes/BlackMATE/gtk-3.0/gtk-widgets-assets-dark.css
/* ... */
radio:indeterminate:disabled,
radio row:selected:indeterminate:disabled,
radio row:selected:focus:indeterminate:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-mixed-insensitive-dark.svg"));
}

sidebar radio:checked,
sidebar radio:checked:focus,
sidebar radio:checked:hover,
sidebar radio:active,
sidebar radio:active:focus,
sidebar radio:active:hover {
	-gtk-icon-source: -gtk-scaled(url("assets/sidebar-radio-checked-dark.svg"));
}

sidebar  radio:hover {
	-gtk-icon-source: -gtk-scaled(url("assets/sidebar-radio-prelight.svg"));
}

sidebar radio:checked:selected,
sidebar radio:checked:selected:focus,
sidebar radio:active:selected,
sidebar radio:active:selected:focus {
	-gtk-icon-source: -gtk-scaled(url("assets/sidebar-radio-selected-dark.svg"));
}

sidebar radio:selected:hover,
sidebar radio:selected:focus {
	-gtk-icon-source: -gtk-scaled(url("assets/sidebar-radio-selected-prelight.svg"));
}

/* Now draw menu check and radio items */

menuitem radio,
menuitem radio:hover,
menuitem radio:disabled,
menuitem check,
menuitem check:hover,
menuitem check:disabled {
	background-color: transparent;
	background-image: none;
	border-style: none;
	border-image: none;
	min-height: 12px;
  	min-width: 12px;
}

menuitem radio:checked,
menuitem radio:active {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-menuitem-checked.svg"));
}

menuitem radio:checked:hover,
menuitem radio:active:hover {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-menuitem-checked-prelight.svg"));
}

menuitem radio:checked:disabled,
menuitem radio:active:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-menuitem-checked-insensitive.svg"));
}

menuitem radio:indeterminate {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-menuitem-mixed.svg"));
}

menuitem radio:indeterminate:hover {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-menuitem-mixed-prelight.svg"));
}

menuitem radio:indeterminate:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-menuitem-mixed-insensitive.svg"));
}

menuitem check:checked,
menuitem check:active {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-menuitem-checked.svg"));
}

menuitem check:checked:hover,
menuitem check:active:hover {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-menuitem-checked-prelight.svg"));
}

menuitem check:checked:disabled,
menuitem check:active:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-menuitem-checked-insensitive.svg"));
}

menuitem check:indeterminate {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-menuitem-mixed.svg"));
}

menuitem check:indeterminate:hover {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-menuitem-mixed-prelight.svg"));
}

 menuitem check:indeterminate:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-menuitem-mixed-insensitive.svg"));
}

/***********
 * Entries *
 ***********/

/*.entry:focus {
    border-image: url("assets/entry-border-focused-dark.svg") 3 / 3px stretch;
}*/

primary-toolbar combobox.combobox-entry  button:checked,
primary-toolbar combobox.combobox-entry  button:hover:checked,
primary-toolbar combobox.combobox-entry  button:active,
primary-toolbar combobox.combobox-entry  button:hover:active,
primary-toolbar combobox.combobox-entry  button,
combobox.combobox-entry  button:checked,
combobox.combobox-entry  button:hover:checked,
combobox.combobox-entry  button:active,
combobox.combobox-entry  button:hover:active,
combobox.combobox-entry  button {
	border-image: url("assets/entry-border-normal-dark.svg") 3 / 3px stretch;
}

/***********
 * Sliders *
 ***********/

scale slider,
scale slider.horizontal {
	background-image: url("assets/scale-slider-horizontal-dark.svg");
}

scale slider:disabled,
scale slider.horizontal:disabled {
	background-image: url("assets/scale-slider-horizontal-insensitive-dark.svg");
}

scale slider.vertical {
	background-image: url("assets/scale-slider-vertical-dark.svg");
}

scale slider.vertical:disabled {
	background-image: url("assets/scale-slider-vertical-insensitive-dark.svg");
}

scale.scale-has-marks-above slider.horizontal {
	background-image: url("assets/scale-slider-marks-above-horizontal-dark.svg");
}

scale.scale-has-marks-above slider.horizontal:disabled {
	background-image: url("assets/scale-slider-marks-above-horizontal-insensitive-dark.svg");
}

scale.scale-has-marks-above slider.vertical {
	background-image: url("assets/scale-slider-marks-above-vertical-dark.svg");
}

scale.scale-has-marks-above slider.vertical:disabled {
	background-image: url("assets/scale-slider-marks-above-vertical-insensitive-dark.svg");
}

scale.scale-has-marks-below slider.horizontal {
	background-image: url("assets/scale-slider-marks-below-horizontal-dark.svg");
}

scale.scale-has-marks-below slider.horizontal:disabled {
	background-image: url("assets/scale-slider-marks-below-horizontal-insensitive-dark.svg");
}

scale.scale-has-marks-below slider.vertical {
	background-image: url("assets/scale-slider-marks-below-vertical-dark.svg");
}

scale.scale-has-marks-below slider.vertical:disabled {
	background-image: url("assets/scale-slider-marks-below-vertical-insensitive-dark.svg");
}

.cursor-handle.top {
	background-image: url("assets/scale-slider-marks-above-horizontal-dark.svg");
}

.cursor-handle.bottom {
	background-image: url("assets/scale-slider-marks-below-horizontal-dark.svg");
}

/*the little usefull helper*/

grip {
background-color: transparent;
background-image: url("assets/resize-grip.svg");
}

/***********
 * Buttons *
 ***********/

button {
	border-image: url("assets/button-border-dark.svg") 3 / 3px stretch;
}

button:checked,
button:hover:checked,
button:active,
button:hover:active
list-row button:hover,
list-row button:selected,
list-row button:selected:hover {
	border-image: url("assets/button-active-border-dark.svg") 3 / 3px stretch;
}

button.default,
notebook  button.default {
	border-image: url("assets/button-default-border-dark.svg") 3 / 3px stretch;
}
/* ... */

